--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sass": "^1.92.1"
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.31.0",
+    "sass": "^1.92.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
